Funcion para editar el perfil del candidato (solo falta el historial y estudios)